issue with #events-white text alignment fixed

--- a/main.css
+++ b/main.css
@@ -222,6 +222,7 @@ nav a{
     #events-white h5{
         padding-top: 0;
         padding-bottom: 10px;
+        text-align: center;
     }
 
     #events-coordinator-btn button{
